fix: adjust width of mat-icon in upload component for better alignment

--- a/src/app/components/add-helper/sections/helper-details/helper-details.component.scss
+++ b/src/app/components/add-helper/sections/helper-details/helper-details.component.scss
@@ -65,6 +65,7 @@ input[type="email"] {
     font-size: 36px;
     color: #3f51b5;
     margin-bottom: 8px;
+    width:50px;
   }
 
   button {
